Update and rename 2019-04-31-Tropico6 to 2019-05-05-Tropico6.md

--- a/_posts/2019-05-05-Tropico6.md
+++ b/_posts/2019-05-05-Tropico6.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Tropico 6 - A Veteran's Review
-date: 2019-04-31
+date: 2019-05-05
 description:  Review of Tropico 6
 category: review
 published: true
@@ -14,11 +14,20 @@ tags: [casual, review, not-uni]
 
 If you’re a new player to the Tropico franchise – the sixth instalment is a good place to start if you like a challenge. 
 Tropico is a city building game that allows you to roleplay as the leader you want to be. 
-Whether it be a tyrannical dictator who rules the people under a well-polished army boot and forces them to work gruelling jobs for no money, or a benevolent president who provides free housing and healthcare for all and campaigns like everyone else in elections; you can create your ideal tropical paradise, if you can get to grips with the new and… interesting economy. 
-Visually the game looks great, as you’d hope for a Caribbean island simulation. I really enjoyed the tiny details, such as ship wrecks in the sea and ancient markings carved into the mountains and volcanos. But despite the calm look, the game throws a lot at you very fast and as an inexperienced player, if you can’t find the balance to keep your people happy and your economy in check you may not be able to enjoy it for very long. 
-One of the main changes in Tropico 6 is the size of the maps. It seems Limbic listened to our cries and added extra islands, with new boat mechanics and bridges. Although this prevents sacrificing buildings in the modern era (endgame), it does create issues with the fundamental idea behind Tropico’s economies, getting resources from A (a mine or plantation etc) to B (the dock) as this distance can be much further. Let’s say you want to set up a gold mine but the only deposit is on the other side of the map? It will be a while before you start seeing any gold being sold and it won’t get exported very regularly. This is taking to account some questionable path-finding from the in-game citizens
+Whether it be a tyrannical dictator who rules the people under a well-polished army boot and forces them to work gruelling jobs for no money, or a benevolent president who provides free housing and healthcare for all and campaigns like everyone else in elections; 
+you can create your ideal tropical paradise, if you can get to grips with the new and… interesting economy. 
+Visually the game looks great, as you’d hope for a Caribbean island simulation. 
+I really enjoyed the tiny details, such as ship wrecks in the sea and ancient markings carved into the mountains and volcanos. 
+But despite the calm look, the game throws a lot at you very fast and as an inexperienced player, if you can’t find the balance to keep your people happy and your economy in check you may not be able to enjoy it for very long. 
+One of the main changes in Tropico 6 is the size of the maps. It seems Limbic listened to our cries and added extra islands, with new boat mechanics and bridges. 
+Although this prevents sacrificing buildings in the modern era (endgame), it does create issues with the fundamental idea behind Tropico’s economies, getting resources from A (a mine or plantation etc) to B (the dock) as this distance can be much further. Let’s say you want to set up a gold mine but the only deposit is on the other side of the map? 
+It will be a while before you start seeing any gold being sold and it won’t get exported very regularly. 
+This is taking to account some questionable path-finding from the in-game citizens
+
+
 This isn’t the only system that’s been shaken up. 
-Limbic have ditched the dynasty system from Tropico 5, which added family members with custom traits and an extra slice of customisation and replaced it with a much simpler trait system. I enjoyed the new customisation system which locks some cosmetics behind achievements, although in my playthrough I did find some bugs.
+Limbic have ditched the dynasty system from Tropico 5, which added family members with custom traits and an extra slice of customisation and replaced it with a much simpler trait system. 
+I enjoyed the new customisation system which locks some cosmetics behind achievements, although in my playthrough I did find some bugs.
  
 
 
