3rd year update

--- a/_posts/2020-03-03-HealthyU.md
+++ b/_posts/2020-03-03-HealthyU.md
@@ -37,4 +37,12 @@ These were simple enough to design so I will not share the code - however, this 
 
 In order to maintain user engagement and fulfill a user's need for social interaction - I decided to implement a basic virtual avatar that would guide the user around the app as well as being a (really cute) virtual pet. <br>Users can interact with the avatar by feeding it, resting it and playing mini-games with it. As well as this, there are over 22 different avatars to pick from (although they are all cats).
     
+    
+## Mini games
+
+The app features mini games to improve engagement and allow the user to interact with their avatar. One game is a 2D falling coin game where the user has to catch coins and avoid falling objects to earn points. <br>Another game is a gamified version of the <a href="https://www.stress.org.uk/deep-breathing-4-7-8-approach/" target="_blank">4-7-8 breathing pattern</a> to reduce anxiety or help people sleep.<br> The avatar grows and shrinks for the same amount of time as the method advises, helping the user to visualise how long they should inhale/exhale for. <br>
+Although this was a small addition, I was pleased I could add something simple which was proven to help reduce anxiety symptoms.
+## Evaluation
+
+I am pleased with the finished app prototype. I think it showcases what an app of this nature could look like, and I plan to improve the features that were barer and improve the UI. I have learned a lot about project management, and the importance of setting clear milestones throughout the development cycle. I'm also pleased to have had a chance to gain experience developing for a mobile platform, as this is an area I have been interested in but hadn't had the chance to pursue on my degree.
 
