--- a/_posts/2018-10-29-DevBlog1.md
+++ b/_posts/2018-10-29-DevBlog1.md
@@ -5,7 +5,7 @@ date: 2018-10-29
 description: 1st Developer Blog
 category: development
 published: true
-tags: [dev, blog]
+tags: [dev, blog, degree]
 ---
 
 # Welcome
