--- a/_posts/2019-01-22-DevBlog2.md
+++ b/_posts/2019-01-22-DevBlog2.md
@@ -5,7 +5,7 @@ date: 2019-01-22
 description: 2nd Developer Blog
 category: development
 published: true
-tags: [dev, blog]
+tags: [dev, blog, degree]
 ---
 
 
