--- a/_posts/2019-04-01-DevBlog3.md
+++ b/_posts/2019-04-01-DevBlog3.md
@@ -5,7 +5,7 @@ date: 2019-04-01
 description: 3rd Developer Blog
 category: development
 published: true
-tags: [dev, blog]
+tags: [dev, blog, degree]
 ---
 
 <b>April</b>
