--- a/_posts/2019-10-09-AVPBlog1.md
+++ b/_posts/2019-10-09-AVPBlog1.md
@@ -4,7 +4,7 @@ title: Audio Visual Production Blog 1
 description: First dev blog for my AVP module
 category: blog
 published: false
-tags: [uni, AVP, blog]
+tags: [uni, AVP, blog, degree]
 ---
 # Audio Visual Production
 
