--- a/_posts/2020-03-03-HealthyU.md
+++ b/_posts/2020-03-03-HealthyU.md
@@ -6,7 +6,7 @@ excerpt: "My dissertation project - a health and fitness app built using game de
 category: App
 project: true
 published: true
-tags: [c#, unity, app, dissertation]
+tags: [c#, unity, app, dissertation, degree]
 feature: https://raw.githubusercontent.com/mikeratcliffe97/mikeratcliffe97.github.io/master/assets/img/HUMain.jpg
 ---
 
